<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="os_message">Please share drive link for all data</string>
    <string name="app_name">FlippBidd</string>
    <string name="api_key">AIzaSyBc_J_YeSgQaawZ69wpGkvEy6L9vXNzaE8</string>
    <string name="facebook_app_id">579653105714572</string>
    <string name="fb_login_protocol_scheme">fb579653105714572</string>
    <string name="no_city_availabilityy">City not available! Please re-select state!</string>
    <string name="no_internet">Please check your internet connection.</string>
    <string name="string_share_sms_message">You have been invited to join a FlippBidd chat. \nPlease download the App for\n
IOS @ https://apple.co/335MnY7\n
 and Android @ https://bit.ly/3eCsOc6
 \n- Thank You</string>
    <string name="openDrawer">open</string>
    <string name="closeDrawer">close</string>
    <string name="String_title_home">Home</string>
    <string name="String_title_myprofile">My Profile</string>
    <string name="String_title_findmydeal">Find My Deal</string>
    <string name="String_title_view_notification">View Notification</string>
    <string name="String_title_upload_property_notification">Property Upload</string>
    <string name="String_title_notification">Flippbidd Alerts</string>
    <string name="String_title_mylikes">My Likes</string>
    <string name="String_title_createfilter">Notification Filter</string>
    <string name="rating_qst_title_message">Rate Property Admin, your review is important for Network.</string>
    <string name="rating_qst_1">Professionalism</string>
    <string name="rating_qst_2">Price/Fees</string>
    <string name="rating_qst_3">Communication</string>
    <string name="rating_qst_4">Property Knowledge</string>
    <string name="rating_qst_5">Likely to Work with Again</string>
    <string name="String_title_my_calender">My Calender</string>
    <string name="String_title_myuploaded">My Uploads</string>
    <string name="String_rentals">Lending</string>
    <string name="String_services">Services</string>
    <string name="String_title_logout">Logout</string>
    <string name="String_title_setting">Settings</string>
    <string name="String_title_property">Properties</string>
    <string name="String_property_not_available">This property is not available.</string>
    <string name="String_title_of_post_Servicer">Post Services</string>
    <string name="String_title_of_edit_Servicer">Edit Services</string>
    <string name="string_font">fonts/Poppins-Regular.ttf</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="string_trms"><![CDATA[<font color=#BCBCBC>By checking the Box you are agreeing to our</font>]]><b><u>\nTerms &amp; Privacy Policy</u></b></string>
    <string name="sing_header_message">You\'re just one step away from signing up</string>
    <string name="sing_header_message1">Bridging The Real Estate Community</string>
    <string name="string_all_state">All State</string>
    <string name="string_all_city">All City</string>
    <string name="string_all_property_type">All Property</string>
    <string name="string_all_bulidng_type">All Building</string>
    <string name="string_all_service_type">All Service</string>
    <string name="string_save">Save</string>
    <string name="string_add_other">Add Another</string>
    <string name="string_doc_driver_license">Driver License</string>
    <string name="string_doc_w2">W2\'s</string>
    <string name="string_doc_paystubs">Paystubs</string>
    <string name="string_doc_bank_statements">Bank Statements</string>
    <string name="string_doc_tax_return">Tax Returns</string>
    <string name="string_doc_other">Other</string>
    <string name="string_yes">Yes</string>
    <string name="string_no">No</string>
    <string name="string_Cancel">Cancel</string>
    <string name="string_delete_message">Are you sure you want to delete property?</string>
    <string name="string_unavailable_message">Are you sure you want to make this property unavailable?</string>
    <string name="string_available_message">Are you sure you want to make this property available?</string>
    <string name="no_notification_mesg">You have no alerts.</string>
    <string name="time_ago_prefix"></string>
    <string name="time_ago_suffix">ago</string>
    <string name="time_ago_seconds">less than a minute</string>
    <string name="time_ago_minute">about a minute</string>
    <string name="time_ago_minutes">%d minutes</string>
    <string name="time_ago_hour">about an hour</string>
    <string name="time_ago_hours">about %d hours</string>
    <string name="time_ago_day">a day</string>
    <string name="time_ago_days">%d days</string>
    <string name="time_ago_month">about a month</string>
    <string name="time_ago_months">%d months</string>
    <string name="time_ago_year">about a year</string>
    <string name="time_ago_years">%d years</string>
    <string name="credit_mess">Credit \nRemaining</string>
    <string name="string_subscription">Subscribe</string>
    <string name="messages_limit_error">Oops! Property is still unavailable. Please wait for 24 hrs Time-clock to expire.</string>
    <string name="messages_full_user">\t- Unlimited FlippBidd Credits\n
                                      \t- Contact Information Sharing\n
                                      \t- 24 Hour Countdown Clock</string>
    <string name="messages_pro_user">\t-  Unlimited FlippBidd Credits\n
                                      \t- Contact Information Sharing\n
                                      \t- No Countdown Clock</string>
    <string name="alert_delete_all_notification_message">Are you sure you want to clear all the notifications?</string>
    <string name="alert_delete_notification_message">Are you sure you want to delete notification?</string>
    <string name="string_success">Success</string>
    <string name="string_advice_message">Please be advised that this chat is being monitored by our Administrator.  Any exchange or request for contact information i.e. phone number, email is a direct violation of our Terms/Conditions and may result in the termination of your subscription.</string>
    <string name="string_change_password_success">Change Password</string>
    <string name="string_unsbcriber">Are you sure you want to Unsubscribe?</string>
    <string name="string_payment">Make Payment</string>
    <string name="string_error">Error</string>
    <string name="string_no_internet_header">No Internet!</string>
    <string name="string_ok">OK</string>
    <string name="string_conform">Confirm</string>
    <string name="string_continue">Continue</string>
    <string name="string_success_property">Property Was Uploaded Successfully</string>
    <string name="success_property">Property has been uploaded successfully</string>
    <string name="string_quick_success_property">Property Was Uploaded Successfully, Please Add Another</string>
    <string name="string_success_rental">Rental property added successfully</string>
    <string name="string_edit_rental">Rental property updated successfully</string>
    <string name="string_succes_service">Service added successfully</string>
    <string name="string_edit_service">Service updated successfully</string>
    <string name="string_notification_filter">Notification Filter</string>
    <string name="string_notification_message">Are you sure you want to update notification filter ?</string>
    <string name="string_re_select_file_error_message">File type not valid. Please select a valid file format.</string>
    <string name="string__state_load_error_message">Something went wrong while loading state.</string>
    <string name="dlg_loading">Loading</string>
    <string name="error_connection">Connection failed. Please check your internet connection.</string>
    <string name="error_response_timeout">No response received within reply timeout</string>
    <string name="no_server_connection">Server connection timeout</string>
    <string name="connection_error">Connection must be made</string>
    <string name="typing_status">Someone is Typing</string>
    <string name="group_channel_list_file_message_text">%1$s has uploaded a file.</string>
    <string name="member_list">Members</string>
    <string name="invite_member">Invite members</string>
    <string name="request_leave_channel">Are you sure you want to leave: %s ?</string>
    <string name="request_delete_channel">Are you sure you want to delete: %s ?</string>
    <string name="action_leave_channel">Leave</string>
    <string name="option_delete_message">Delete message</string>
    <string name="option_edit_message">Edit message</string>
    <string name="action_send_message">SEND</string>
    <string name="action_update_message">SAVE</string>
    <string name="user_typing">%s is typing</string>
    <string name="two_users_typing">%s and %s is typing</string>
    <string name="users_typing"> Multiple users are typing</string>
    <string name="request_external_storage">Storage access permissions are required to upload/download files.</string>
    <string name="request_download_file">Download file?</string>
    <string name="request_upload_doc_success_message">The Document has been saved to the Data Folder</string>
    <string name="send_upload_message">Do you want to upload this document to the Data Folder?</string>
    <string name="send_image_message">Do you want to upload this image to the Data Folder?</string>
    <string name="wrong_file_info">Extracting file information failed.</string>
    <string name="wrong_file_path">File must be located in local storage.</string>
    <string name="request_retry_send_message">Retry?</string>
    <string name="accept_permission">Okay</string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="call">Call</string>
    <string name="upload">Upload</string>
    <string name="resend_message">Resend</string>
    <string name="delete_message">Delete</string>
    <string name="chat_message">You have no chats available. Create a chat by pressing the + button.</string>
    <string name="doc_expired_message">Proof Of Funds (Expires in 30 days)</string>
    <string name="property_address">Property Address  </string>
    <string name="buyer_name">Buyer Name/Corp Name</string>
    <string name="offer_amount">Offer Amount (in USD)</string>
    <string name="down_payment">Down Payment (in USD)</string>
    <string name="funding_type">Funding Type</string>
    <string name="closing_time_frame">Closing Timeframe</string>
    <string name="purchasing">Purchasing “AS IS” Condition</string>
    <string name="attorney_name">Escrow/Title/Attorney</string>
    <string name="attorney_firm_name">Contact Person</string>
    <string name="attorney_firm_number">Phone Number</string>
    <string name="attorney_fax_number">Fax Number</string>
    <string name="attorney_email">Email Address</string>
    <string name="attorney_address">Office Address</string>
    <string name="attorney_contingencies">Notes</string>
    <string name="first_name">First Name</string>
    <string name="upload_pof_">Proof of Funds (Optional)</string>
    <string name="last_name">Last Name </string>
    <string name="mobile_number">Phone Number </string>
    <string name="terms"><b>The Buyer/Corporation has done their complete
due diligence on the above mentioned property,
does not have any further questions pertaining
to the property, agrees that all offers are final and
does not have the right to negotiate the purchase
price and/or fees once the contract is requested.
</b></string>
    <string name="terms1"><b>I affirm and certify that all the information and answers
herein are complete, true and correct. I understand that
any misrepresentation or falsification of any information
may render this Letter of Intent to Purchase Real Estate
void.
</b></string>
    <string name="string_property_bidd_header">What would you pay for this Property?</string>
</resources>