<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:fitsSystemWindows="true">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/ViewpagerPropertyData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


    <LinearLayout
        android:id="@+id/linearLayoutOfTabBar"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_65sdp"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3">

            <com.flippbidd.CustomClass.CustomAppCompatButton
                android:id="@+id/btnPropertySelected"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/button_gradian"
                android:text="@string/String_title_property"
                android:textAllCaps="false"
                android:textSize="@dimen/_12sdp"
                app:font_type="font_regular" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_weight="0.3">

            <com.flippbidd.CustomClass.CustomAppCompatButton
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/white_button_gradian"
                android:text="@string/String_rentals"
                android:textAllCaps="false"
                android:textSize="@dimen/_12sdp"
                app:font_type="font_regular" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_weight="0.3">

            <com.flippbidd.CustomClass.CustomAppCompatButton
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/white_button_gradian"
                android:text="@string/String_services"
                android:textAllCaps="false"
                android:textSize="@dimen/_12sdp"
                app:font_type="font_regular" />
        </RelativeLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:background="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutOfTabBar" />
    <include layout="@layout/layout_progress_dialog" />

</androidx.constraintlayout.widget.ConstraintLayout>